--- a/Models/handwriting_recognition/configs.yaml
+++ b/Models/handwriting_recognition/configs.yaml
@@ -1,7 +1,9 @@
-batch_size: 32
+batch_size: 8
 height: 64
 learning_rate: 0.001
 max_text_length: 16
 model_path: Models/handwriting_recognition
+train_epochs: 50
+train_workers: 4
 vocab: '!"#&''(),-.0123456789:;?ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwxyz'
 width: 256
