--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Python==3.10.11
 # This project requires Python 3.10 for TensorFlow compatibility
-# numpy 1.26.4 as some module doesnt work for numpy 2.0 , previously 2.2.2
+# numpy 1.26.4 as some other module doesnt work for numpy 2.0 , previously 2.2.2
 Flask==3.1.0
 tensorflow==2.10.0
 mltu==0.1.5
