--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ venv/
 __pycache__/app.cpython-312.pyc
 __pycache__/laplacian_edge_detector.cpython-312.pyc
 Datasets/
+Models/handwriting_recognition/
